--- a/Myerp/Tpl/Chanpin/danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/danxiangfuwu.html
@@ -108,7 +108,7 @@
             <td scope="row" align="left" valign="top"><php>echo date('Y/m/d H:i',$vol['time'])</php></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
-              <input type="button" value="删除" name="button" class="button primary" onClick="deletebaozhang(<{$vol['chanpinID']}>);" >
+              <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
             </td>
           </tr>
       <php> }}</php>
@@ -135,7 +135,7 @@
             <td scope="row" align="left" valign="top"><php>echo date('Y/m/d H:i',$vol['time'])</php></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
-              <input type="button" value="删除" name="button" class="button primary" onClick="deletebaozhang(<{$vol['chanpinID']}>);" >
+              <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
             </td>
           </tr>
       <php> }}</php>
@@ -164,7 +164,7 @@
             <td scope="row" align="left" valign="top"><php>echo date('Y/m/d H:i',$vol['time'])</php></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
-              <input type="button" value="删除" name="button" class="button primary" onClick="deletebaozhang(<{$vol['chanpinID']}>);" >
+              <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
             </td>
           </tr>
       <php> }}</php>
@@ -193,7 +193,7 @@
             <td scope="row" align="left" valign="top"><php>echo date('Y/m/d H:i',$vol['time'])</php></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
-              <input type="button" value="删除" name="button" class="button primary" onClick="deletebaozhang(<{$vol['chanpinID']}>);" >
+              <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
             </td>
           </tr>
       <php> }}</php>
@@ -219,7 +219,7 @@
             <td scope="row" align="left" valign="top"><php>echo date('Y/m/d H:i',$vol['time'])</php></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
-              <input type="button" value="删除" name="button" class="button primary" onClick="deletebaozhang(<{$vol['chanpinID']}>);" >
+              <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
             </td>
           </tr>
       <php> }}</php>
