--- a/Myerp/Tpl/Dijie/djtuandanxiangfuwu.html
+++ b/Myerp/Tpl/Dijie/djtuandanxiangfuwu.html
@@ -33,7 +33,7 @@
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'订房');">
-              <input type="button" value="删除" name="button" class="button primary" onClick="deletebaozhang(<{$vol['chanpinID']}>);" >
+              <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
             </td>
           </tr>
         <php>}</php>
@@ -65,7 +65,7 @@
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'交通');">
-              <input type="button" value="删除" name="button" class="button primary" onClick="deletebaozhang(<{$vol['chanpinID']}>);" >
+              <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
             </td>
           </tr>
         <php>}</php>
@@ -95,7 +95,7 @@
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'餐饮');">
-              <input type="button" value="删除" name="button" class="button primary" onClick="deletebaozhang(<{$vol['chanpinID']}>);" >
+              <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
             </td>
           </tr>
         <php>}</php>
@@ -126,7 +126,7 @@
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'门票');">
-              <input type="button" value="删除" name="button" class="button primary" onClick="deletebaozhang(<{$vol['chanpinID']}>);" >
+              <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
             </td>
           </tr>
         <php>}</php>
@@ -156,7 +156,7 @@
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'导游');">
-              <input type="button" value="删除" name="button" class="button primary" onClick="deletebaozhang(<{$vol['chanpinID']}>);" >
+              <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
             </td>
           </tr>
         <php>}</php>
@@ -186,7 +186,7 @@
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'补账');">
-              <input type="button" value="删除" name="button" class="button primary" onClick="deletebaozhang(<{$vol['chanpinID']}>);" >
+              <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
             </td>
           </tr>
         <php>}</php>
