--- a/Myerp/Tpl/Dijie/djtuanxiangmu.html
+++ b/Myerp/Tpl/Dijie/djtuanxiangmu.html
@@ -30,7 +30,7 @@
             <td scope="row" align="left" valign="top"><{$vol['remark']}></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>);">
-              <input type="button" value="删除" name="button" class="button primary" onClick="deleteSystemItem(<{$vol['chanpinID']}>);" >
+              <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deleteSystemItem(<{$vol['chanpinID']}>);" >
       <php>
       $taskom = A("Method")->_checkOMTaskShenhe($vol['chanpinID'],'报账项');
       if(false !== $taskom){
@@ -76,7 +76,7 @@
             <td scope="row" align="left" valign="top"><{$vol['remark']}></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>);">
-              <input type="button" value="删除" name="button" class="button primary" onClick="deleteSystemItem(<{$vol['chanpinID']}>);" >
+              <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deleteSystemItem(<{$vol['chanpinID']}>);" >
               
       <php>
       $taskom = A("Method")->_checkOMTaskShenhe($vol['chanpinID'],'报账项');
@@ -236,11 +236,16 @@ function showinfo(itemID){
 			data:	"dataID="+dataID+"&dotype="+dotype+"&datatype="+datatype+"&title="+title,
 			success:function(msg){
 				scroll(0,0);
-				ThinkAjax.myAjaxResponse(msg,'resultdiv');
+				ThinkAjax.myAjaxResponse(msg,'resultdiv',shenhe_after);
 			}
 		});
 	}
-
+function shenhe_after(data,status){
+	if(status == 1){
+		alert(data['status_shenhe']+"操作成功！！");
+		location.reload();
+	}
+}
 
  function deleteSystemItem(id)
  {
