--- a/Myerp/Tpl/Dijie/header_chanpin.html
+++ b/Myerp/Tpl/Dijie/header_chanpin.html
@@ -15,11 +15,12 @@
 			}
 		});
 	}
-	
-	function shenhe_after(data,status){
-		if(status == 1 && data['status'] == '批准')
+function shenhe_after(data,status){
+	if(status == 1){
+		alert(data['status_shenhe']+"操作成功！！");
 		location.reload();
 	}
+}
 	
     </script>
 
